# webidler

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/postgres/: 20250605164820_create_leaderboard.sql
backend/migrations/sqlite/: 20250605164820_create_leaderboard.sql
backend/src/: app_state.rs  auth.rs  constants.rs  data.rs  email.rs  game.rs  lib.rs  main.rs  rng.rs  tasks.rs  websocket.rs  ws_connect.rs
backend/src/db/: characters.rs  characters_builds.rs  characters_data.rs  game_instances.rs  game_sessions.rs  game_stats.rs  leaderboard.rs  market.rs  mod.rs  password_reset.rs  pool.rs  stash_items.rs  stashes.rs  users.rs  utc_datetime.rs
backend/src/db/migrations/: migration_0_1_0_to_0_1_1.rs  migration_0_1_1_to_0_1_2.rs  migration_0_1_2_to_0_1_3.rs  migration_0_1_3_to_0_1_4.rs  migration_0_1_4_to_0_1_5.rs  migration_0_1_5_to_0_1_6.rs  migration_0_1_6_to_0_1_7.rs  migration_0_1_7_to_0_1_8.rs  migration_0_1_8_to_0_1_9.rs  migration_0_1_9_to_0_1_10.rs  migration_0_2_00_to_0_2_01.rs  mod.rs
backend/src/game/: data.rs  game_data.rs  game_inputs.rs  game_instance.rs  game_instance_data.rs  game_orchestrator.rs  game_sync.rs  game_timer.rs  mod.rs  session.rs  sessions.rs  world.rs
backend/src/game/data/: area.rs  data_init.rs  event.rs  indexed_store.rs  inventory_data.rs  items_store.rs  items_table.rs  loot_table.rs  manifest.rs  master_store.rs  mod.rs  monster.rs  passives.rs  world.rs
backend/src/game/systems/: area_controller.rs  benedictions_controller.rs  character_controller.rs  characters_controller.rs  characters_updater.rs  events_resolver.rs  increase_factors.rs  inventory_controller.rs  items_controller.rs  leaderboard_controller.rs  loot_controller.rs  loot_generator.rs  loot_table.rs  mod.rs  monsters_controller.rs  monsters_updater.rs  monsters_wave.rs  passives_controller.rs  player_controller.rs  player_updater.rs  quests_controller.rs  sessions_controller.rs  skill_masteries_controller.rs  skills_controller.rs  skills_updater.rs  stashes_controller.rs  stats_controller.rs  stats_updater.rs  statuses_controller.rs  triggers_controller.rs  weapon.rs  (+1 more)
backend/src/integration/: chat.rs  discord.rs  mod.rs
backend/src/rest/: account_api.rs  app_error.rs  characters_api.rs  forge_api.rs  game_api.rs  inventory_api.rs  leaderboard_api.rs  market_api.rs  mod.rs  public_api.rs  stash_api.rs  stashes_api.rs  stats_api.rs  temple_api.rs  users_api.rs  utils.rs
backend/src/websocket/: connection.rs  handler.rs  mod.rs
backend_chat/: Cargo.toml  Dockerfile
backend_chat/src/: app_state.rs  auth.rs  lib.rs  main.rs
backend_chat/src/chat/: chat_session.rs  chat_state.rs  messages_processor.rs  mod.rs  profanities_checker.rs  user_moderation.rs
backend_chat/src/db/: mod.rs  pool.rs
backend_chat/src/rest/: app_error.rs  messages.rs  mod.rs  moderation.rs
backend_chat/src/websocket/: connection.rs  handler.rs  mod.rs
backend_shared/: Cargo.toml
backend_shared/src/: lib.rs  profanities_checker.rs  signature.rs
backend_shared/src/http/: chat.rs  mod.rs  users.rs
frontend/: Cargo.toml  Trunk-release.toml  Trunk.toml  index.html  tailwind.config.js
frontend/.cargo/: config.toml
frontend/public/: incrementaldb.txt  manifest.json
frontend/src/: app.rs  assets.rs  lib.rs  main.rs  tailwind.config.js  utils.rs
frontend/src/components/: accessibility.rs  app.rs  auth.rs  backend_client.rs  buttons.rs  captcha.rs  data_context.rs  events.rs  game.rs  main_menu.rs  mod.rs  progress_bar.rs  rest.rs  settings.rs  websocket.rs
frontend/style/: shared.css  tailwind.css
migrations/: 20250831173113_market.sql  Cargo.toml
migrations/postgres/: 20250605164820_create_leaderboard.sql  20250607102103_game_sessions.sql  20250802082541_save_session.sql  20250809102500_create_account.sql  20250820084832_encrypt_emails.sql  20250824084931_passive_ascendance.sql  20250831173113_market.sql  20250903214306_auto_increment.sql  20250904122002_uc_character_name.sql  20250904124313_uc_inames.sql  20250923161552_market_logs.sql  20251008170600_forgot_password.sql  20251114164849_temple.sql  20251120183500_game_stats.sql  20251204161919_shared_stash.sql  20260211154741_prealloc_passives.sql  20260419134333_realms.sql  20260420101500_played_time.sql  20260514120000_stash_owner_id.sql  20260617184242_skill_mastery.sql
migrations/sqlite/: 20250605164820_create_leaderboard.sql  20250607102103_game_sessions.sql  20250802082541_save_session.sql  20250809102500_create_account.sql  20250820084832_encrypt_emails.sql  20250824084931_passive_ascendance.sql  20250831173113_market.sql  20250923161552_market_logs.sql  20250928205412_market_data_version.sql  20251008170600_forgot_password.sql  20251114164849_temple.sql  20251120183500_game_stats.sql  20251124111901_leaderboard_fix.sql  20251204161919_shared_stash.sql  20260211154741_prealloc_passives.sql  20260419134333_realms.sql  20260420101500_played_time.sql  20260427155247_chat_badges.sql  20260514120000_stash_owner_id.sql  20260617184242_skill_mastery.sql
shared/: Cargo.toml
shared/src/: client_messages.rs  computations.rs  constants.rs  data.rs  lib.rs  serde_utils.rs  server_messages.rs  types.rs
shared/src/data/: area.rs  badges.rs  chance.rs  character.rs  character_status.rs  conditional_modifier.rs  effect.rs  forge.rs  game_stats.rs  indexed_key.rs  item.rs  item_affix.rs  loot.rs  market.rs  mod.rs  modifier.rs  monster.rs  passive.rs  player.rs  quest.rs  realms.rs  skill.rs  skill_mastery.rs  stash.rs  stat_effect.rs  status.rs  temple.rs  trigger.rs  user.rs  values.rs  world.rs
shared/src/http/: client.rs  server.rs
shared/src/messages/: chat.rs  client.rs  compression.rs  macros.rs  mod.rs  server.rs
tools/: Cargo.toml  Trunk.toml  index.html
tools/src/: app.rs  header.rs  lib.rs  main.rs  tailwind.config.js
tools/src/pages/: home.rs  items.rs  logo.rs  mod.rs  passives.rs  skills.rs  ui_tests.rs
tools/src/utils/: file_loader.rs  history_tracker.rs  json_editor.rs  mod.rs
tools/style/: tailwind.css
(+578 files in other folders)
