[workspace]
members = [
    "backend",
    "frontend", 
    "shared",
]

resolver = "3"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
codegen-units = 16   # More units = faster compilation
debug = 1            # Line tables only

[profile.release]
lto = "thin"         # Enable Link Time Optimization
opt-level = 's'      # Optimize for size
codegen-units = 1    # Maximize optimization
strip = true         # Strip symbols from binary
