[workspace]
members = [
    "backend",
    "frontend", 
    "shared",
]

resolver = "3"

[profile.dev]
opt-level = 0
incremental = true
split-debuginfo = "unpacked"
codegen-units = 16   # More units = faster compilation
debug = 1            # Line tables only

[profile.dev.package."*"]
opt-level = 0

[profile.release]
lto = "thin"         # Enable Link Time Optimization
codegen-units = 1    # Maximize optimization
