[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.97"
dotenvy = "0.15.7"

axum = { version = "0.8.3", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1", features = ["full"] }

http = "1.2.0"
headers = "0.4.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }

serde = "1.0.219"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
serde_plain = "1.0.2"

jsonwebtoken = "9"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"

reqwest = { version = "0.12.22", features = ["json"] }

rand = "0.9.0"
strum = "0.27"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
itertools = "0.14.0"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
