[package]
name = "backend_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_chat = { path = "../shared_chat", features=[] }
backend_shared = { path = "../backend_shared", features=[] }

anyhow = "1.0.97"
dotenvy = "0.15.7"

axum = { version = "0.8.3", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1", features = ["full"] }

http = "1.2.0"
headers = "0.4.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

serde = "1.0.219"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
serde_plain = "1.0.2"
serde_ignored = "0.1"

reqwest = { version = "0.13.2", features = ["json"] }

rand = "0.9.0"
rand_chacha = "0.9.0"
strum = "0.27"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1.11.1"

itertools = "0.14.0"
indexmap = { version = "2.11.0", features = ["serde"] }
dashmap = "6.1.0"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
