[package]
name = "backend_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_chat = { path = "../shared_chat", features=[] }
backend_shared = { path = "../backend_shared", features=[] }

anyhow = "1.0.100"
dotenvy = "0.15.7"

axum = { version = "0.8.6", features = ["ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }

futures = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.48.0", features = ["full"] }

http = "1.4.0"
headers = "0.4.1"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"

serde = "1.0.228"
rmp-serde = "1.3.0"
serde_json = "1.0.145"
serde_plain = "1.0.2"
serde_ignored = "0.1.14"

reqwest = { version = "0.13.2", features = ["json"] }

rand = "0.9.2"
rand_chacha = "0.9.0"
strum = "0.27.2"
chrono = "0.4.42"
uuid = { version = "1.20.0", features = ["v4"] }
regex = "1.12.2"

itertools = "0.14.0"
indexmap = { version = "2.14.0", features = ["serde"] }
dashmap = "6.1.0"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
