[package]
name = "backend_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

strum = "0.27.2"
strum_macros = "0.27.2"
itertools = "0.14.0"

chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde"] }
nutype = { version = "0.6.2",  features = ["serde", "regex"] }

regex = "1.12.2"
aho-corasick = "1.1.4"
unicode-normalization = "0.1.25"

anyhow = "1.0.100"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
