[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.97"
leptos = { version = "0.8.8", features = ["csr"] }
leptos_router = "0.8.6"
leptos_meta = "0.8.5"
leptos-use = { version = "0.16.2", features = ["use_mouse","use_window_size","on_click_outside","storage"] }
leptos_toaster = "0.2.0"

console_error_panic_hook = "0.1.7"
reqwest = {version = "0.12.22", features = ["json"]}
url = "2.5.4"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
codee = { version = "0.3.0", features = ["msgpack_serde"] }
strum = "0.27"

rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

uuid = { version = "1.17.0", features = ["serde"] }
serde_plain = "1.0.2"
chrono = "0.4.41"
