[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", features=[] }
shared_chat = { path = "../shared_chat", features=[] }

anyhow = "1.0.97"
leptos = { version = "0.8.17", features = ["csr"] }
leptos_router = "0.8.13"
leptos_meta = "0.8.6"
leptos-use = { version = "0.18.3", features = [
    "use_document",
    "use_mouse",
    "use_mouse_in_element",
    "use_event_listener",
    "use_window_size",
    "on_click_outside",
    "use_infinite_scroll",
    "storage",
] }
web-sys = { version = "0.3", features = ["Performance", "Selection"] }

console_error_panic_hook = "0.1.7"
reqwest = { version = "0.13.2", features = ["json"] }
url = "2.5.4"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
codee = { version = "0.3.0", features = ["msgpack_serde"] }
strum = "0.27"
nutype = { version = "0.6.2",  features = ["serde", "regex"] }
uuid = { version = "1.17.0", features = ["v4","js"] }

chrono = "0.4.41"
indexmap = "2.11.0"
itertools = "0.14.0"

rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
futures = "0.3.32"

