[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.97"
dotenvy = "0.15.7"

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }

serde = "1.0.219"
rmp-serde = "1.3.0"
serde_json = "1.0.140"
serde_plain = "1.0.2"

rand = "0.9.0"
strum = "0.27"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = []
