[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.100"
dotenvy = "0.15.7"

futures = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1.48.0", features = ["full"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
] }

serde = "1.0.228"
rmp-serde = "1.3.0"
serde_json = "1.0.145"
serde_plain = "1.0.2"

rand = "0.9.2"
strum = "0.27.2"
chrono = "0.4.42"
uuid = { version = "1.20.0", features = ["v4"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = []
