[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

strum = "0.27"
strum_macros = "0.27"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde"] }
nutype = { version = "0.6.2",  features = ["serde", "regex"] }
regex = "1.11.1"
lazy_static = "1.5.0"

anyhow = "1.0.97"
