[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

strum = "0.27.2"
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde"] }
nutype = { version = "0.6.2",  features = ["serde", "regex"] }
regex = "1.12.2"
lazy_static = "1.5.0"
indexmap = { version = "2.14.0", features = ["serde"] }

anyhow = "1.0.100"

[features]
default = []
modifiable = []
