[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

strum = "0.27.2"
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde"] }
nutype = { version = "0.6.2",  features = ["serde", "regex"] }
regex = "1.12.2"
lazy_static = "1.5.0"
indexmap = { version = "2.14.0", features = ["serde"] }

anyhow = "1.0.100"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = { version = "0.13.3", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ruzstd = "0.8.3"

[features]
default = []
modifiable = []
