[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
frontend = { path = "../frontend" }
shared = { path = "../shared" }

anyhow = "1.0.97"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_router = "0.7.8"
leptos_meta = "0.7.8"
leptos-use = { version = "0.15.7", features = [
    "use_document",
    "use_mouse",
    "use_mouse_in_element",
    "use_event_listener",
    "use_window_size",
    "on_click_outside",
    "use_infinite_scroll",
    "storage",
    "watch_debounced",
] }
leptos_toaster = "0.2.0"
web-sys = { version = "0.3", features = ["Performance","Blob","BlobPropertyBag"] }

console_error_panic_hook = "0.1.7"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
codee = { version = "0.3.0", features = ["msgpack_serde"] }
strum = "0.27"
nutype = { version = "0.6.2",  features = ["serde", "regex"] }

chrono = "0.4.41"
indexmap = "2.11.0"
itertools = "0.14.0"

rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
regex = "1.12.2"
html-escape = "0.2.13"
serde_ignored = "0.1.14"

