[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
frontend = { path = "../frontend" }
shared = { path = "../shared", features = ["modifiable"] }

anyhow = "1.0.100"
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
leptos_meta = "0.8.6"
leptos-use = { version = "0.18.3", features = [
    "use_document",
    "use_mouse",
    "use_mouse_in_element",
    "use_event_listener",
    "use_window_size",
    "on_click_outside",
    "use_infinite_scroll",
    "storage",
    "watch_debounced"
] }
web-sys = { version = "0.3.95", features = ["Performance","Blob","BlobPropertyBag"] }

console_error_panic_hook = "0.1.7"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_plain = "1.0.2"
codee = { version = "0.3.5", features = ["msgpack_serde"] }
strum = "0.27.2"
nutype = { version = "0.6.2",  features = ["serde", "regex"] }

chrono = "0.4.42"
indexmap = "2.14.0"
itertools = "0.14.0"

rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
regex = "1.12.2"
html-escape = "0.2.13"
serde_ignored = "0.1.14"
uuid = { version = "1.20.0", features = ["v4","js"] }

